# pivy

./: .gitignore  Makefile  TODO.md  flake.nix  justfile  openssh.patch  pivy-agent@.service
.github/workflows/: build-deb-ubuntu.yml  build-macos.yml  nix.yml
docs/: debug-askpass-sign-failure.md
docs/plans/: 2026-02-17-bats-test-bootstrap-design.md  2026-02-17-bats-test-bootstrap.md  2026-02-17-rust-rewrite-design.md  2026-02-17-rust-rewrite-plan.md  2026-02-17-service-commands-design.md  2026-02-17-service-commands-plan.md  2026-02-20-env-var-defaults-design.md  2026-02-20-env-var-defaults-plan.md  2026-02-28-agent-unlock-improvements.md  2026-04-06-xdg-basedir-design.md  2026-04-06-xdg-basedir-plan.md  2026-04-09-extension-response-types-design.md  2026-04-09-extension-response-types-plan.md
docs/rfcs/: 0001-ssh-agent-extensions.md  0002-piv-ecdh-box-encryption.md
go/: go.mod  main.go
libexec/: pivy-askpass  pivy-notify
macosx/: net.cooperi.pivy-agent.plist
man/: pivy-agent.1.adoc  pivy-box.1.adoc  pivy-tool.1.adoc
rust/: Cargo.toml
rust/crates/pivy-agent/: Cargo.toml
rust/crates/pivy-agent/src/: agent.rs  card.rs  main.rs
rust/crates/pivy-piv/: Cargo.toml
rust/crates/pivy-piv/src/: apdu.rs  cert.rs  context.rs  error.rs  guid.rs  lib.rs  slot.rs  tlv.rs  token.rs
rust/crates/pivy-piv/tests/: apdu_tests.rs  context_tests.rs  guid_tests.rs  sign_tests.rs  slot_tests.rs  tlv_tests.rs  token_tests.rs
src/: bunyan.c  ebox-cmd.c  errf.c  pam_pivy.c  piv.c  pivy-agent.c  xdg.c  xdg.h
test/: pivy-wire-test.c
zz-tests_bats/: common.bash  justfile  pivy_agent.bats  pivy_agent_conformance.bats  pivy_agent_conformance_hardware.bats  pivy_agent_rust.bats  pivy_agent_rust_conformance.bats  pivy_box.bats  pivy_ext_interop.bats  pivy_tool.bats  pivy_wire_format.bats
(+2 files in other folders)
