[package]
name = "pivy-piv"
version = "0.1.0"
edition = "2021"

[dependencies]
pivy-common = { path = "../pivy-common" }
pcsc = "2.9"
hex = "0.4"
openssl = "0.10"
ssh-key = { version = "0.6", features = ["alloc", "ecdsa", "rsa", "ed25519"] }
thiserror = "2"
tracing = "0.1"
zeroize = { version = "1", features = ["derive"] }
